# FlowForge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  cliff.toml  index.html  package-lock.json  package.json  renovate.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  REUSABILITY-PROPOSAL.md  ROADMAP.md  STATE.md  v1.6.0-MILESTONE-AUDIT.md  v1.7.0-MILESTONE-AUDIT.md
.planning/debug/: 3d-model-load-failure.md  3d-model-wave7.md  backspace-nav-repo-browser.md  blade-header-breadcrumb-ux.md  breadcrumb-nav-issues.md  cmd-k-command-palette.md  diffblade-md-preview.md  diffblade-monaco-0px-height.md  duplicate-blade-registration.md  gitflow-cheatsheet-no-entry-point.md  gitflow-svg-confusing.md  gitflow-svg-dark-rectangle.md  gitflow-svg-round5.md  (+6 more)
__mocks__/: zustand.ts
docs/: download.md  extension-api.md  extension-manifest.md  getting-started.md  index.md  trust-levels.md
scripts/: check-blade-boundaries.sh
src/: App.tsx  bindings.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: bundled-gitignore-templates.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/extensions/: discovery.rs  install.rs  manifest.rs  mod.rs
src-tauri/src/git/: branch.rs  browse.rs  changelog.rs  clone.rs  commands.rs  commit.rs  config.rs  conflict.rs  conventional.rs  credentials.rs  diff.rs  error.rs  gitignore.rs  graph.rs  history.rs  init.rs  insights.rs  merge.rs  mod.rs  nuget.rs  remote.rs  repository.rs  staging.rs  stash.rs  tag.rs  undo.rs  watcher.rs  worktree.rs
src-tauri/src/gitflow/: commands.rs  error.rs  init.rs  machine.rs  merge.rs  mod.rs  policy.rs  state.rs
src-tauri/src/github/: auth.rs  branch_info.rs  client.rs  error.rs  issues.rs  mod.rs  pulls.rs  rate_limit.rs  remote.rs  token.rs  types.rs
(+1728 files in other folders)
