[package]
name = "flowforge"
version = "1.3.0"
edition = "2024"

[lib]
name = "flowforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-specta = { version = "2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
base64 = "0.22"
git2 = "0.20"
statig = "0.4"
git-conventional = "0.12"
tera = "1"
chrono = "0.4"
notify = "8"
notify-debouncer-mini = "0.7"
